--- a/Hangfire/Hangfire.API/Hangfire.API.csproj
+++ b/Hangfire/Hangfire.API/Hangfire.API.csproj
@@ -9,12 +9,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Hangfire" Version="1.8.5" />
-    <PackageReference Include="Hangfire.Core" Version="1.8.5" />
-    <PackageReference Include="Hangfire.SqlServer" Version="1.8.5" />
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.4" />
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.2" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+	  <PackageReference Include="Hangfire.AspNetCore" Version="1.8.0-rc3" />
+	  <PackageReference Include="Hangfire.Core" Version="1.8.0-rc3" />
+	  <PackageReference Include="Hangfire.Dashboard.Basic.Authentication" Version="5.0.0" />
+	  <PackageReference Include="Hangfire.MemoryStorage" Version="1.7.0" />
+	  <PackageReference Include="Hangfire.SqlServer" Version="1.8.0-rc3" />
+	  <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1" />
+	  <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
+	  <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
