--- a/Hangfire/Hangfire.API/appsettings.json
+++ b/Hangfire/Hangfire.API/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DBConnection": "Server=.;Database=HangfireDev;Trusted_Connection=SSPI;Encrypt=false;TrustServerCertificate=true;"
+  },
+  "HangfireCredentials": {
+    "UserName": "test-user",
+    "Password": "Password123!"
+  }
 }
