--- a/Hangfire/Hangfire.API/Hangfire.API.csproj
+++ b/Hangfire/Hangfire.API/Hangfire.API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -15,12 +15,16 @@
 	  <PackageReference Include="Hangfire.MemoryStorage" Version="1.7.0" />
 	  <PackageReference Include="Hangfire.SqlServer" Version="1.8.0-rc3" />
 	  <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.10">
+	    <PrivateAssets>all</PrivateAssets>
+	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	  </PackageReference>
 	  <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
 	  <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <ProjectReference Include="..\Hangfire.Database\Hangfire.Database.csproj" />
   </ItemGroup>
 
 </Project>
