--- a/Hangfire/Hangfire.API/appsettings.json
+++ b/Hangfire/Hangfire.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DBConnection": "Server=.;Database=HangfireDb;User Id=azra;Password=Password123!;Trusted_Connection=SSPI;Encrypt=false;TrustServerCertificate=true;"
+    "DBConnection": "Server=.;Database=HangfireDb;User Id=azra;Password=Password123!!;Trusted_Connection=SSPI;Encrypt=false;TrustServerCertificate=true;"
   },
   "HangfireCredentials": {
     "UserName": "test-user",
